--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
 	<link href="build/css/slidebackground.css" rel="stylesheet">
 </head>
 <body>
-	<!-- <div class="slidebackground">
-		<div class="test">
-			a
-		</div>
-	</div> -->
 	<div class="slidebackground">
-		<div src-i="build/img/1.jpg" class="background1"></div>
-		<div src-i="build/img/2.jpg" class="background2"></div>
+		<div src="build/img/1.jpg" class="background bw"></div>
+		<div src="build/img/2.jpg" class="background bw"></div>
+		<div src="build/img/3.jpg" class="background bw"></div>
+		<div src="build/img/4.jpg" class="background bw"></div>
 	</div>
 	<script src="build/js/jquery-1.11.3.js"></script>
 	<script src="build/js/slidebackground.js"></script>
-	<script>
-		slidebackground();
-	</script>
 </body>
 </html>
