Make 2 options of css: compress and standard css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="build/css/bootstrap.min.css" rel="stylesheet">
-	<link href="build/css/slidebackground.css" rel="stylesheet">
+	<link href="build/css/slidebackground.min.css" rel="stylesheet">
 </head>
 <body>
 	<div class="slidebackground">
