Update 1.1: - Replace js file with direct css for background image

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 </head>
 <body>
 	<div class="slidebackground">
-		<div src="build/img/1.jpg" class="background bw"></div>
-		<div src="build/img/2.jpg" class="background bw"></div>
-		<div src="build/img/3.jpg" class="background bw"></div>
-		<div src="build/img/4.jpg" class="background bw"></div>
+		<div class="background bw" style="background-image: url(build/img/1.jpg);"></div>
+		<div class="background bw" style="background-image: url(build/img/2.jpg);"></div>
+		<div class="background bw" style="background-image: url(build/img/3.jpg);"></div>
+		<div class="background bw" style="background-image: url(build/img/4.jpg);"></div>
 	</div>
 	<script src="build/js/jquery-1.11.3.js"></script>
-	<script src="build/js/slidebackground.js"></script>
 </body>
 </html>
